--- a/public/locales/layout.json
+++ b/public/locales/layout.json
@@ -3,6 +3,57 @@
     "it": {
       "me": "chi sono",
       "servizi": "cosa offro",
+      "singleService": [
+        {
+          "img": "/serviziImg/logodesign.png",
+          "name": "Logo Design",
+          "title": "logo",
+          "descrizione": "Un logo progettato su misura, in base al tuo target di riferimento e alla tua vision è un investimento per il successo della tua azienda.",
+          "link": "/service/logo"
+        },
+        {
+          "img": "/serviziImg/branding.png",
+          "name": "Branding Strategy",
+          "descrizione": "Una buona strategia di branding ti permette di differenziarti dalla concorrenza e di costruire un'identità forte, unica e riconoscibile.",
+          "link": "/service/branding"
+        },
+        {
+          "img": "/serviziImg/label.png",
+          "name": "Label & Packaging",
+          "descrizione": "Il label e il packaging design sono essenziali per il successo di un prodotto, in un mercato competitivo, sono cruciali per catturare l’interesse del pubblico e informare il consumatore.",
+          "link": "/service/label"
+        },
+        {
+          "img": "/serviziImg/social.png",
+          "name": "Social Media Strategy",
+          "descrizione": "Risparmia tempo e migliora la tua presenza online con contenuti mirati e aggiornati alle ultime tendenze per aumentare l'engagement.",
+          "link": "/service/social"
+        },
+        {
+          "img": "/serviziImg/campagne.png",
+          "name": "Offline Campaigns",
+          "descrizione": "Le campagne offline plasmano scelte, creano connessioni e trasmettono messaggi profondi, incarnando idee, valori e brand che si toccano, sentono e ricordano.",
+          "link": "/service/campagne"
+        },
+        {
+          "img": "/serviziImg/allestimenti.png",
+          "name": "Stage Design",
+          "descrizione": "Gli allestimenti personalizzati conferiscono personalità ad uno spazio vuoto. Possono evocare emozioni, creare atmosfere e coinvolgere il pubblico in modo unico.",
+          "link": "/service/allestimenti"
+        },
+        {
+          "img": "/serviziImg/illustrazione.png",
+          "name": "Illustrations",
+          "descrizione": "Le illustrazioni create ad hoc, sono molto più di semplici immagini; sono elementi chiave che permettono di esaltare il tuo brand e renderlo unico e memorabile.",
+          "link": "/service/illustrazione"
+        },
+        {
+          "img": "/serviziImg/contentCreator.png",
+          "name": "Content Creator",
+          "descrizione": "Nel mondo digitale di oggi, il contenuto ricopre un ruolo sempre più importante. Ma non si tratta solo di quantità; si tratta di qualità e, soprattutto, di personalizzazione.",
+          "link": "/service/content"
+        }
+      ],
       "portfolio": "portfolio",
       "blog": "blog",
       "contatti": "+ contattami",
@@ -22,6 +73,57 @@
     "en": {
       "me": "who i am",
       "servizi": "services",
+      "singleService": [
+        {
+          "img": "/serviziImg/logodesign.png",
+          "name": "Logo Design",
+          "title": "logo",
+          "descrizione": "A custom-designed logo, tailored to your target audience and your vision, is an investment in your company's success.",
+          "link": "/service/logo"
+        },
+        {
+          "img": "/serviziImg/branding.png",
+          "name": "Branding Strategy",
+          "descrizione": "A good branding strategy allows you to stand out from the competition and build a strong, unique, and recognizable identity.",
+          "link": "/service/branding"
+        },
+        {
+          "img": "/serviziImg/label.png",
+          "name": "Label & Packaging",
+          "descrizione": "Label and packaging design are essential for a product's success. In a competitive market, they are crucial for capturing the interest of the audience and informing the consumer.",
+          "link": "/service/label"
+        },
+        {
+          "img": "/serviziImg/social.png",
+          "name": "Social Media Strategy",
+          "descrizione": "Save time and enhance your online presence with targeted, up-to-date content to increase engagement.",
+          "link": "/service/social"
+        },
+        {
+          "img": "/serviziImg/campagne.png",
+          "name": "Offline Campaigns",
+          "descrizione": "Offline campaigns shape choices, create connections, and convey deep messages, embodying ideas, values, and brands that people touch, feel, and remember.",
+          "link": "/service/campagne"
+        },
+        {
+          "img": "/serviziImg/allestimenti.png",
+          "name": "Stage Design",
+          "descrizione": "Custom setups give personality to an empty space. They can evoke emotions, create atmospheres, and engage the audience uniquely.",
+          "link": "/service/allestimenti"
+        },
+        {
+          "img": "/serviziImg/illustrazione.png",
+          "name": "Illustrations",
+          "descrizione": "Tailor-made illustrations are more than just images; they are key elements that enhance your brand and make it unique and memorable.",
+          "link": "/service/illustrazione"
+        },
+        {
+          "img": "/serviziImg/contentCreator.png",
+          "name": "Content Creator",
+          "descrizione": "In today's digital world, content plays an increasingly important role. But it's not just about quantity; it's about quality and, most importantly, personalization.",
+          "link": "/service/content"
+        }
+      ],
       "portfolio": "portfolio",
       "blog": "blog",
 
