--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -95,49 +95,49 @@
         "name": "Logo Design",
         "title": "logo",
         "descrizione": "Un logo progettato su misura, in base al tuo target di riferimento e alla tua vision è un investimento per il successo della tua azienda.",
-        "link": "/service/logo"
+        "link": "/servizi/logo"
       },
       {
         "img": "/serviziImg/branding.png",
         "name": "Branding Strategy",
         "descrizione": "Una buona strategia di branding ti permette di differenziarti dalla concorrenza e di costruire un'identità forte, unica e riconoscibile.",
-        "link": "/service/branding"
+        "link": "/servizi/branding"
       },
       {
         "img": "/serviziImg/label.png",
         "name": "Label & Packaging",
         "descrizione": "Il label e il packaging design sono essenziali per il successo di un prodotto, in un mercato competitivo, sono cruciali per catturare l’interesse del pubblico e informare il consumatore.",
-        "link": "/service/label"
+        "link": "/servizi/label"
       },
       {
         "img": "/serviziImg/social.png",
         "name": "Social Media Strategy",
         "descrizione": "Risparmia tempo e migliora la tua presenza online con contenuti mirati e aggiornati alle ultime tendenze per aumentare l'engagement.",
-        "link": "/service/social"
+        "link": "/servizi/social"
       },
       {
         "img": "/serviziImg/campagne.png",
         "name": "Offline Campaigns",
         "descrizione": "Le campagne offline plasmano scelte, creano connessioni e trasmettono messaggi profondi, incarnando idee, valori e brand che si toccano, sentono e ricordano.",
-        "link": "/service/campagne"
+        "link": "/servizi/campagne"
       },
       {
         "img": "/serviziImg/allestimenti.png",
         "name": "Stage Design",
         "descrizione": "Gli allestimenti personalizzati conferiscono personalità ad uno spazio vuoto. Possono evocare emozioni, creare atmosfere e coinvolgere il pubblico in modo unico.",
-        "link": "/service/allestimenti"
+        "link": "/servizi/allestimenti"
       },
       {
         "img": "/serviziImg/illustrazione.png",
         "name": "Illustrations",
         "descrizione": "Le illustrazioni create ad hoc, sono molto più di semplici immagini; sono elementi chiave che permettono di esaltare il tuo brand e renderlo unico e memorabile.",
-        "link": "/service/illustrazione"
+        "link": "/servizi/illustrazione"
       },
       {
         "img": "/serviziImg/contentCreator.png",
         "name": "Content Creator",
         "descrizione": "Nel mondo digitale di oggi, il contenuto ricopre un ruolo sempre più importante. Ma non si tratta solo di quantità; si tratta di qualità e, soprattutto, di personalizzazione.",
-        "link": "/service/content"
+        "link": "/servizi/content"
       }
     ],
     "singleService": {
@@ -955,25 +955,25 @@
         "img": "/fraService/tailored.png",
         "name": "Tailored Site",
         "descrizione": "Un sito su misura con una grafica accattivante per distinguerti tra le migliaia di siti pre-confezionati.",
-        "link": "https://www.thallion-dev.it/service/tailored"
+        "link": "https://www.thallion-dev.it/servizi/tailored"
       },
       {
         "img": "/fraService/ecommerce.png",
         "name": "E-commerce",
         "descrizione": "Che tu abbia pochi prodotti o una selezione più ampia, costruiamo attorno al tuo brand la chiave del tuo successo online.",
-        "link": "https://www.thallion-dev.it/service/ecommerce"
+        "link": "https://www.thallion-dev.it/servizi/ecommerce"
       },
       {
         "img": "/fraService/figma.png",
         "name": "Prototipazione con figma",
         "descrizione": "Testa la tua idea prima di svilupparla! Ideale per piccole aziende e start-up. Risparmia budget e tempo.",
-        "link": "https://www.thallion-dev.it/service/figma"
+        "link": "https://www.thallion-dev.it/servizi/figma"
       },
       {
         "img": "/fraService/restyle.png",
         "name": "È Tempo Di Un Restyling",
         "descrizione": "Il tuo sito non sta funzionando come pensavi? Fammi dare un'occhiata! Magari è una questione di stile.",
-        "link": "https://www.thallion-dev.it/service/restyling"
+        "link": "https://www.thallion-dev.it/servizi/restyling"
       }
     ]
   },
@@ -993,7 +993,7 @@
         "title": "ansermè",
         "descrizione": "Bio Bontà di Montagna",
         "location": "Arnad  - Valle d’Aosta",
-        "link": "/works/ansermè",
+        "link": "/portfolio/ansermè",
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
@@ -1002,7 +1002,7 @@
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
         "location": "Ayas - Valle d’Aosta",
-        "link": "/works/becquet",
+        "link": "/portfolio/becquet",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1011,7 +1011,7 @@
         "title": "reve",
         "descrizione": "Azienda Agricola di Andrea Casadei",
         "location": "Arnad - Valle d’Aosta",
-        "link": "/works/reve",
+        "link": "/portfolio/reve",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1020,7 +1020,7 @@
         "title": "phillacolor",
         "descrizione": "Eco-Liquid Dye",
         "location": "Saint-Pierre  - Valle d’Aosta",
-        "link": "/works/phillacolor",
+        "link": "/portfolio/phillacolor",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1029,7 +1029,7 @@
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
         "location": "Donnas - Valle d’Aosta",
-        "link": "/works/chappoz",
+        "link": "/portfolio/chappoz",
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
@@ -1038,7 +1038,7 @@
         "title": "daemy",
         "descrizione": "Piante Officinali",
         "location": "Valsavarenche - Valle d’Aosta",
-        "link": "/works/daemy",
+        "link": "/portfolio/daemy",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1047,7 +1047,7 @@
         "title": "horto",
         "descrizione": "Prodotti tipici di Monte Amiata e Val d'Orcia",
         "location": "Abbadia San Salvatore (SI) - Toscana",
-        "link": "/works/horto",
+        "link": "/portfolio/horto",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1056,7 +1056,7 @@
         "title": "isavivai",
         "descrizione": "Il Verde che ti emoziona",
         "location": "Aymavilles  - Valle d’Aosta",
-        "link": "/works/isavivai",
+        "link": "/portfolio/isavivai",
         "button": ["Branding", "Allestimenti"]
       },
       {
@@ -1065,7 +1065,7 @@
         "title": "saintgrat",
         "descrizione": "Azienda Agricola",
         "location": "Gressan - Valle d’Aosta",
-        "link": "/works/saintgrat",
+        "link": "/portfolio/saintgrat",
         "button": ["Branding", "Label Design"]
       },
       {
@@ -1074,7 +1074,7 @@
         "title": "morzenti",
         "descrizione": "Azienda Agricola",
         "location": "Aymavilles - Valle d’Aosta",
-        "link": "/works/morzenti",
+        "link": "/portfolio/morzenti",
         "button": ["Branding", "Social Media"]
       }
     ],
