--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -245,6 +245,59 @@
             "height": 600
           }
         ],
+        "gallery4": [
+          {
+            "src": "/serviziImg/logoDesign/logo_17.webp",
+            "width": 600,
+            "height": 600
+          },
+
+          {
+            "src": "/serviziImg/logoDesign/logo_18.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_19.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_20.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_21.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_22.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_23.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_24.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_25.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_26.webp",
+            "width": 600,
+            "height": 600
+          }
+        ],
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
         "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
